# OpenAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPECS.md  TODO.md  agent.py  dspy_agent.py  main.py  pyproject.toml  rag_init.py  run.ps1  run.sh  semantics.json  setup.ps1  setup.sh  tmp.py
TUI/: Cargo.toml
TUI/.cargo/: config.toml
TUI/src/: action.rs  app.rs  backend.rs  command.rs  config.rs  main.rs  markdown.rs  ui.rs  ui_state.rs
chroma_db/: chroma.sqlite3
openagent/: __init__.py  __main__.py  config.py
openagent/core/: __init__.py  agent.py  intent.py  llm.py  tool_agent.py
openagent/memory/: __init__.py  context.py  conversation.py  session.py
openagent/rag/: __init__.py  query.py  scanner.py  store.py
openagent/server/: __init__.py  handlers.py  jsonrpc.py  protocol.py
openagent/telemetry/: __init__.py  tokens.py
openagent/tools/: __init__.py  builtin.py  executor.py  mcp.py  registry.py
scripts/: rag_query.py
tests/: __init__.py  conftest.py  integration_test_llm.py
tests/python/: __init__.py
tests/python/unit/: test_agent.py  test_builtin_tools.py  test_context.py  test_conversation.py  test_handlers.py  test_intent.py  test_jsonrpc.py  test_llm.py  test_protocol.py  test_session.py  test_tokens.py  test_tool_agent.py  test_tools.py
