[package]
name = "openagent-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
ratatui = "0.29"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
unicode-width = "0.2"
arboard = "3"
